@@ -21,6 +21,7 @@
   * Nokogiri::HTML::Document#title= now always add a title element
     even if a head element is not present, trying hard to find the
     best place to put it.
+  * Nokogiri::XML::DTD#html_dtd? and #html5_dtd? are added.
 
 * Bugfixes
 
